--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
   <article class="contenedor">
-    <section class="sec1"><div class="img"></div></section>
+    
+    <section class="sec1"><img class="img" src="images/image-product-desktop.jpg" alt=""></section>
+
     <section class="sec2">
       <p class="p1">PERFUME</p>
       <h1>Gabrielle Essence Eau De Parfum</h1>
