--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 <body>
 
   <article class="contenedor">
-    
-    <section class="sec1"><img class="img" src="images/image-product-desktop.jpg" alt=""></section>
+
+    <section class="sec1">
+      <img class="img" src="images/image-product-desktop.jpg" alt="Perfume">
+      <img class="img2" src="images/image-product-mobile.jpg" alt="perfume">
+    </section>
 
     <section class="sec2">
       <p class="p1">PERFUME</p>
